# mechintlab

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
docs/: 01_toy_superposition.md  02_induction_heads.md  index.md
experiments/induction_heads/: run.py
experiments/toy_superposition/: run.py
mechintlab/: __init__.py
mechintlab/analysis/: patching.py
mechintlab/infra/: registry.py
mechintlab/models/: sae.py  tiny_transformer.py
mechintlab/utils/: io.py  seed.py
mechintlab/viz/: dashboards.py
tests/: test_sae.py
