
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mechintlab"
version = "0.1.0"
description = "Mechanistic interpretability starter lab"
authors = [{name="You"}]
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
